--- a/shader-presentation.tex
+++ b/shader-presentation.tex
@@ -37,7 +37,7 @@
 \newcommand{\source}[1]{\let\thefootnote\relax\footnotetext{\scriptsize\textcolor{kugray1}{Source: #1}}}
 
 \bibliographystyle{longalpha}
-\bibliography{./ref}
+\bibliography{ref}
 
 \input{mybeamermacros}
 
@@ -73,9 +73,6 @@
 }
 
 
-
-
-
 \begin{document}
 
 % Set background to front page
@@ -105,15 +102,33 @@
 \section{Shading pipeline}
 
 \begin{frame}
-\frametitle{Shading pipeline}
+\frametitle{Shading pipeline - states}
+\begin{columns}
+\column{0.5\textwidth}
+Primitives go through a pipeline before being rendered to screen.
 
-TODO: Include pipeline picture!
+\vspace{3mm}
+Each pipeline stage has a well-defined purpose.
 
-Where are the scan conversion algorithms run?
+\vspace{3mm}
+All the stages are performed on the graphics hardware.
 
-What is rasterization?
+\vspace{3mm}
+Some of these stages are programmable -
 
-What is a shader?
+\vspace{1mm}
+we refer to these as shaders!
+\column{0.5\textwidth}
+\includegraphics[width=36mm]{images/RenderingPipeline.png}
+\end{columns}
+\end{frame}
+
+\begin{frame}
+\frametitle{Shading pipeline - shading a triangle}
+\includegraphics[width=10cm]{images/pipeline.png}
+
+Blue areas are the shaders we write
+(we will focus on vertex and fragment shaders).
 \end{frame}
 
 
@@ -124,10 +139,9 @@ What is a shader?
 
 \begin{frame}
 \frametitle{glsl - OpenGL Shading Language}
+glsl is a DSL for writing programmable shaders
 
 History with OpenGL (fixed-function pipeline vs. programmable shaders)
-
-glsl is a DSL for writing programmable shaders
 
 glsl has a C-like language syntax
 
@@ -140,15 +154,18 @@ Shaders are purely run on the GPU!
 %
 \begin{frame}
 \frametitle{glsl - OpenGL Shading Language}
-Supported expressions:
+Language features:
 
 \begin{itemize}
-\item primitive data types: \texttt{float, int, uint, $\ldots$}
-\item vector/matrix data types: \texttt{mat2, mat3, mat4, vec2, vec3, vec4, $\ldots$}
-\item special types: \texttt{struct, enum}
-\item functions
+\item primitive data types: \texttt{void, bool, float, int, uint, $\ldots$}
+\item vector/matrix data types: \texttt{mat2, mat3, mat4, vec2, vec3, vec4,
+bvec2, ivec2, uvec2, $\ldots$}
+\item special types: \texttt{struct, enum, arrays}
+\item functions, control flow (\texttt{switch, if, then, else})
+\item overloaded operators (\texttt{+,-,*,/}) for built-in data types.
+\item Bitwise operators, logical operators, relational operators, $\ldots$
+\item texture samplers (\texttt{sampler2D, sampler3D, $\ldots$})
 \end{itemize}
-
 \end{frame}
 
 
@@ -157,22 +174,48 @@ Supported expressions:
 %
 \begin{frame}
 \frametitle{glsl - OpenGL Shading Language}
+Built-in functions:
+\footnote{This is not a complete language reference.}
 
-\subsection{Runtime requirements}
-Important guarantee: determinable running time!
+\begin{itemize}
+\item \textbf{vector operations:}
+\texttt{dot, normalize, length, distance, cross, reflect, refract}
+\item \textbf{matrix operations:}
+\texttt{outerProduct, transpose, determinant, inverse}
+\item \textbf{trigonometry:}
+\texttt{sin, cos, tan, asin, acos, atan, atanh, radians, degrees, $\ldots$}
+\item \textbf{math:}
+\texttt{pow, exp, exp2, log, log2, sqrt, inversesqrt}
+\item \textbf{arithmetics:}
+\footnote{Most arithmetic functions also work on vectors.\\}
+\texttt{min, max, clamp, mix, step, smoothstep,
+sign, floor, ceil, fract, trunc, round, mod}
+\end{itemize}
+\end{frame}
 
+
+%
+%
+%
+\begin{frame}
+\frametitle{glsl - OpenGL Shading Language}
+Language limitations:
 \begin{itemize}
 \item No while loops
 \item No recursion
+\item No pointers
+\item No exceptions
+\item No memory allocations (???)
 \end{itemize}
+Important guarantee: determinable running time!
 
-\subsection{Ensure parallelism}
-\underline{Remarks:}\\\vspace{1mm}
-Shader execution calls are independent and run in parallel
+\vspace{3mm}\underline{Remarks:}\\\vspace{1mm}
+Shader invocations are independent and run in parallel
 
-Not possible to read/modify return values of other shader calls in shader code
+Shader invocations cannot read/modify each other's values
 
-Execution units on GPU's typically cannot do branch-prediction very well!
+Execution units on GPU's typically cannot do branch-prediction very well,
+so avoid \texttt{if}-statements as much as possible.
 \end{frame}
 
 
@@ -187,11 +230,14 @@ Execution units on GPU's typically cannot do branch-prediction very well!
 
 Per-vertex processing
 
-Built-in variables: \texttt{gl\_Position}
+Built-in variables: \texttt{gl\_Position, gl\_PointSize}
 
-Can modify position.
+Outputs a vertex position (x, y, z, w), which must be in NDC.
+\footnote{Normalized Device Coordinates $x,y,z \in [-1,\,1],\ \ w \in [0,1]$.\\}
 
-Outputs a vertex position which must be in normalized coordinates (NDC)
+\vspace{5mm}
+\underline{Typical usage:}\\\vspace{1mm}
+Camera projection, calculate vertex normals, animation
 \end{frame}
 
 
@@ -205,10 +251,34 @@ Per-fragment processing.
 
 Each fragment is typically the size of a pixel
 
-Built-in variables: \texttt{gl\_FragCoord, gl\_FrontFacing, gl\_PointCoord}
+Built-in variables: \texttt{gl\_FragCoord, gl\_FrontFacing, gl\_PointCoord,
+gl\_FragDepth}
 
 Outputs a color value (r, g, b, a), in normalized coordinates ($[0, 1]$).
 
+\vspace{5mm}
+\underline{Typical usage:}\\\vspace{1mm}
+Lighting calculations, texture sampling, post-processing effects.
+\end{frame}
+
+
+%
+%
+%
+\begin{frame}
+\frametitle{Shader programs - How many times is it run?}
+
+Imagine a triangle, in NDC, with coordinates $(-1,-1,0), (-1,1,0), (1,1,0)$.
+
+Assume application window of size $800 \times 600$
+
+$\rightarrow \quad$ 3 vertex shader calls
+
+$\rightarrow \quad \approx (800\cdot 600) / 2 = $ 240000 fragment shader calls!
+\footnote{Could be more due to multisampling\\}\\\vspace{5mm}
+
+\underline{Conclusion:}\\\vspace{1mm}
+If we can do some calculation in vertex shader, we should.
 \end{frame}
 
 
@@ -227,7 +297,7 @@ layout (location = 1) in vec2 texCoord;
 
 Data, such as vertex positions, are buffered to the GPU.
 
-Attributes are pointers to this data.
+Attributes are pointers into this data.
 
 \begin{alltt}
 GLfloat data[] = \{\\
@@ -240,31 +310,32 @@ GLfloat data[] = \{\\
 \end{frame}
 
 
-%% \begin{frame}
-%% \frametitle{Shader variables - Uniforms}
-%% \end{frame}
+%
+%
+%
+\begin{frame}
+\frametitle{Shader variables - Uniforms}
+\end{frame}
 
-%% \begin{frame}
-%% \frametitle{Shader variables - input/ouput}
-%% \end{frame}
-
-%% \begin{frame}
-%% \frametitle{Shader variables - interpolation qualifiers}
-%% \end{frame}
 
 %
 %
 %
 \begin{frame}
-\frametitle{How many times is it run?}
+\frametitle{Shader variables - input/ouput}
+Input/Output variables allow shaders to pass variables down the pipeline. (!!!)
+\begin{alltt}\footnotesize
+// vertex shader\\
+out vec4 vertexColor;\\
 
-Imagine a triangle, in NDC, with coordinates $(-1,-1,0), (-1,1,0), (1,1,0)$.
+void main() \{\\
+    vertexColor = vec4(1.0f, 0.0f, 0.3f, 1.0f);\\
+\}\\
 
-Assume application window of size $800 \times 600$
-
-$\rightarrow \quad$ 3 vertex shader calls
-
-$\rightarrow \quad \approx (800\cdot 600) / 2\ =\ $ 240000 fragment shader calls!
+\vspace{3mm}
+// fragment shader\\
+in vec4 vertexColor;\\
+\end{alltt}
 \end{frame}
 
 
@@ -273,13 +344,30 @@ $\rightarrow \quad \approx (800\cdot 600) / 2\ =\ $ 240000 fragment shader calls
 %
 \begin{frame}
 \frametitle{Creating a shader program}
+
+\begin{itemize}
+\item Compilation
+
+\item Linking
+
+\item Activate program, thus setting the state of OpenGL
+(there is always a default shader)
+
+\item All drawing calls use the currently activated program
+(remember, OpenGL is a state machine)
+\end{itemize}
 \end{frame}
 
 \begin{frame}
 \frametitle{Debugging}
-Black screen
 
-Check variables before they are sent to the GPU
+Black screen / weird rendering results?
+
+\begin{itemize}
+\item Check error status when compiling and linking your shader program.
+\item Check variables before they are sent to the GPU.
+\item Do only one thing at a time - verify that it works before next step.
+\end{itemize}
 \end{frame}
 
 
@@ -289,15 +377,24 @@ Check variables before they are sent to the GPU
 \section{Examples}
 
 \begin{frame}
-\frametitle{Example 1 - static rendering}
+\frametitle{Examples...}
+"Hello, world!\textbackslash{}n" ...
 \end{frame}
 
-\begin{frame}
-\frametitle{Example 2 - animation}
-\end{frame}
 
 \begin{frame}
 \frametitle{Summary}
+We have been given a tour of the graphics pipeline for the OpenGL 3.3
+specification.
+
+\vspace{5mm}
+We have looked at glsl, a DSL for describing programmable shaders in a C-like
+syntax.
+
+\vspace{5mm}
+We have seen some examples of how programmable shaders can be used to
+interpolate colors, perform linear transformations, and create animations.
+
 \end{frame}
 
 \begin{frame}
@@ -305,6 +402,7 @@ Check variables before they are sent to the GPU
 \end{frame}
 
 %\footnotesize
+\bibliographystyle{longalpha}
 \bibliography{refs}
 
 \end{document}
