--- a/refs.bib
+++ b/refs.bib
@@ -1,19 +1,17 @@
-@book{Scrum,
-author = "Jeff Sutherland",
-title = "Scrum Handbook",
-year = "2005",
-publisher = "Scrum Training Institute Press"
-}
-
-@article{Boehm,
-author = "Barry W. Boehm",
-title = "A Spiral Model of Software Development and Enhancement",
-year = "1988",
-journal = "Computer 21.5 (1988): 61-72"
-}
-
 @misc{learnopengl,
-  title = {pipeline},
+  title = {LearnOpenGL},
   howpublished = {\url{http://learnopengl.com}},
   note = {Accessed: 2018-12-16}
+}
+
+@misc{Khronos,
+title = {Rendering Pipeling Overview},
+howpublished = {\url{https://www.khronos.org/opengl/wiki/Rendering_Pipeline_Overview}},
+note = {Accessed: 2018-12-16}
+}
+
+@misc{gpugems,
+title = {The GeForce 6 Series GPU Architecture},
+howpublished = {\url{https://developer.nvidia.com/gpugems/GPUGems2/gpugems2_chapter30.html}},
+note = {Accessed: 2018-12-16}
 }
